err/svnpoller.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/svnpoller'...
Compiling './lib/python3.5/site-packages/svnpoller/sendmail.py'...
***   File "./lib/python3.5/site-packages/svnpoller/sendmail.py", line 22
    raise TypeError, toaddrs
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/svnpoller/svnpoller.py'...
***   File "./lib/python3.5/site-packages/svnpoller/svnpoller.py", line 77
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/svnpoller/tests'...
Compiling './lib/python3.5/site-packages/svnpoller/tests/base.py'...
***   File "./lib/python3.5/site-packages/svnpoller/tests/base.py", line 75
    print cmd # print when test failed. (nose functionality)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/svnpoller/tests/fixtures'...
Listing './lib/python3.5/site-packages/svnpoller-0.0.10.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
